--- a/.env.example
+++ b/.env.example
@@ -20,12 +20,15 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# Database: sqlite (default) or mysql
 DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+
+# MySQL (local: set these and DB_CONNECTION=mysql; Railway: use Variables from MySQL service)
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=stellar_steps
+DB_USERNAME=root
+DB_PASSWORD=
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
