--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "images:webp": "node scripts/convert-images-to-webp.mjs"
     },
     "devDependencies": {
         "@headlessui/react": "^2.0.0",
@@ -19,6 +20,7 @@
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "sharp": "^0.33.5",
         "tailwindcss": "^3.2.1",
         "vite": "^7.0.7"
     },
